<resources>
    <string name="app_name">VtbProject</string>
    <string name="logo_vtb">logo_vtb</string>
    <string name="text_title">Login via</string>
    <string name="text_headLine">Apple</string>
    <string name="text_headLine_facebook">Facebook</string>
    <string name="text_headline_vk">Vkontakte</string>
    <string name="text_headline_email">Email</string>
    <string name="icon_rest">icon_rest</string>
    <string name="icon_airplane">icon_airplane</string>
    <string name="icon_hotel">icon_hotel</string>
    <string name="master_logo">master_logo</string>
    <string name="icon_apple">icon_apple</string>
    <string name="icon_facebook">icon_facebook</string>
    <string name="icon_vkontakte">icon_vkontakte</string>
    <string name="icon_email">icon_email</string>
    <string name="icon_logo">icon_logo</string>
    <string name="action_settings">action_settings</string>
    <string name="text_get_virtual_card">Get a virtual card</string>
    <string name="icon_armenian_guide">icon_armenian_guide</string>
    <string name="icon_next">icon_next</string>
    <string name="icon_logo_white">icon_logo_white</string>
    <string name="tab_me">Me</string>
    <string name="tab_bookings">Bookings</string>
    <string name="tab_favorites">Favorites</string>
    <string name="twitter_icon">twitter_icon</string>
    <string name="instagram_icon">instagram_icon</string>
    <string name="user_name">Anastasia Mos</string>
    <string name="user_email">anmos@gmail.com</string>
    <string name="user_avatar">user_avatar</string>
    <string-array name="tab_view_pager_array">
        <item>Me</item>
        <item>Booking</item>
        <item>Favorites</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amd_usd_eur">(AMD, USD, EUR, RUR) with preferential conversion rate</string>
    <string name="subhead">Multi-currency debit account</string>
    <string name="subhead_1">Instant registration of a virtual card through the application</string>
    <string name="subhead_2">Full control over your banking activity online</string>
    <string name="subhead_3">Payment through the Armenia Guide app</string>
    <string name="subhead_6">Open your VTB card in 3 steps</string>
    <string name="headline_6_1">Start your account, It will take you 5 minutes</string>
    <string name="get_started">Get Started</string>
    <string name="text_login">Login</string>
    <string name="next">Next</string>
    <string name="confirm_you">Confirm your e-mail address</string>
    <string name="verify_you">Verify your identity</string>
    <string name="_2_minutes">2 minutes</string>
    <string name="get_you">Get your virtual debit card</string>
    <string name="_1_minutes">1 minutes</string>
    <string name="authorization_title_1">Authorization</string>
    <string name="authorization_title_2">Email</string>
    <string name="authorization_title_3">Create a password</string>
    <string name="authorization_title_4">Repeat Password</string>
    <string name="authorization_title_5">Log In</string>
    <string name="a">We have sent you an email with a link to confirm your email.</string>
    <string name="auth_title_1">Resend email</string>
    <string name="icon_envelop">icon_envelop</string>
    <string name="card_five">card_five</string>
    <string name="icon_about">icon_about</string>
    <string name="title_fragment_one">The virtual card you will love</string>
    <string name="icon_person">icon_person</string>
    <string name="icon_card">icon_card</string>
    <string name="gravity_sce">gravity_sce</string>
    <string name="open_vtb_card_in_3_steps">Open VTB card in 3 steps</string>
    <string name="icon_close">icon_close</string>
    <string name="confirm_you_1">Fill in the form</string>
    <string name="timer_minutes">2 minutes</string>
    <string name="text_take_biometrics">Take biometrics</string>
    <string name="icon_steps_biometric">icon_steps_biometric</string>
    <string name="icon_steps">icon_steps</string>
    <string name="text_take_photo">Take a photo of your passport</string>
    <string name="timer_minutes_1">1 minutes</string>
    <string name="icon_steps_photo_passport">icon_steps_photo_passport</string>
    <string name="text_btn_get_started">Get started</string>
    <string name="title_personal_information">Personal information</string>
    <string name="text_info_information_user">To get started, tell us about yourself</string>
    <string name="ed_hint_text_first_name">First name</string>
    <string name="ed_hint_text_surname">Surname</string>
    <string name="text_et_date_birth">Date of birth</string>
    <string name="text_et_country">Country</string>
    <string name="ed_hint_text_gender">Gender</string>
    <string name="et_hint_text_citizenship">Citizenship</string>
    <string name="sign_in_title">Create a 5 digest-code</string>
    <string name="circle1">circle1</string>
    <string name="title_face_id">Allow app to use Face ID?</string>
    <string name="title_face_">Not now</string>
    <string name="title_face_1">Allow</string>
    <string name="title_mobile_phone_number">Mobile phone number</string>
    <string name="text_info_mobile_phone_number">WeII need it later to pair your smartphone to your account. This helps keep your account safe</string>
    <string name="et_hint_phone_number">Mobile number</string>
    <string name="title_legal_address">Legal Address</string>
    <string name="text_info_legal_address">Please indicate your legal address</string>
    <string name="text_et_city">City</string>
    <string name="text_et_street_name">Street name</string>
    <string name="ed_hint_text_house_number">House number</string>
    <string name="ed_hint_text_apartment">Apartment</string>
    <string name="enter_password">enter password</string>
    <string name="min_length">min length is 6</string>
    <string name="repeat_password">repeat password</string>
    <string name="password_not_match">password do not match</string>
    <string name="enter_email">enter email</string>
    <string name="title_passport">Passport</string>
    <string name="text_info_passport">Please tell us your nationality and place of birth</string>
    <string name="hint_expiry_date">Expiry date</string>
    <string name="hint_passport_number">Passport number</string>
    <string name="hint_date_of_issue">Date of issue</string>
    <string name="hint_social_card_number">Social Card Number</string>
    <string-array name="country_name">
        <item>Armenia</item>
        
        <item>"Russia"</item>
        
        
        
    </string-array>
    <string-array name="citizen_ship">
        <item>Armenian Federation</item>
        <item>Russian Federation</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="slots_type_phone_number">
        <item>+374(__)___-___</item>
        
        <item>+7(___)___-__-__</item>
        
        
        
    </string-array>
    <string-array name="city_of_russia">
        <item>Adygeya (republic)</item>
        <item>Altay</item>
        <item>Altay (republic)</item>
        <item>Amur (oblast)</item>
        <item>Arkhangelsk (oblast)</item>
        <item>Astrakhan (oblast)</item>
        <item>Bashkortostan (republic)</item>
        <item>Belgorod (oblast)</item>
        <item>Bryansk (oblast)</item>
        <item>Buryatiya (republic)</item>
        <item>Chechnya (republic)</item>
        <item>Chelyabinsk (oblast)</item>
        <item>Chukotka (autonomous okrug)</item>
        <item>Chuvashiya (republic)</item>
        <item>Dagestan (republic)</item>
        <item>Ingushetiya (republic)</item>
        <item>Irkutsk (oblast)</item>
        <item>Ivanovo (oblast)</item>
        <item>Kabardino-Balkariya (republic)</item>
        <item>Kaliningrad (oblast)</item>
        <item>Kalmykiya (republic)</item>
        <item>Kaluga (oblast)</item>
        <item>Kamchatka (kray)</item>
        <item>Karachayevo-Cherkesiya (republic)</item>
        <item>Karelia (republic)</item>
        <item>Kemerovo (oblast)</item>
        <item>Khabarovsk (kray)</item>
        <item>Khakasiya (republic)</item>
        <item>Khanty-Mansi (autonomous okrug)</item>
        <item>Kirov (oblast)</item>
        <item>Komi (republic)</item>
        <item>Kostroma (oblast)</item>
        <item>Krasnodar (kray)</item>
        <item>Krasnoyarsk (kray)</item>
        <item>Kurgan (oblast)</item>
        <item>Kursk (oblast)</item>
        <item>Leningrad (oblast)</item>
        <item>Lipetsk (oblast)</item>
        <item>Magadan (oblast)</item>
        <item>Mari El (republic)</item>
        <item>Mordoviya (republic)</item>
        <item>Moscow (federal city)</item>
        <item>Moscow (oblast)</item>l
        <item>Murmansk (oblast)</item>
        <item>Nenets (autonomous okrug)</item>
        <item>Nizhegorod (oblast)</item>
        <item>North Ossetia–Alania (republic)</item>
        <item>Novgorod (oblast)</item>
        <item>Novosibirsk (oblast)</item>
        <item>Omsk (oblast)</item>
        <item>Orenburg (oblast)</item>
        <item>Oryol (oblast)</item>
        <item>Penza (oblast)</item>
        <item>Perm (kray)</item>
        <item>Primorye (kray)</item>
        <item>Pskov (oblast)</item>
        <item>Rostov (oblast)</item>
        <item>Ryazan (oblast)</item>
        <item>Saint Petersburg (federal city)</item>
        <item>Sakha (republic)</item>
        <item>Sakhalin (oblast)</item>
        <item>Samara (oblast)</item>
        <item>Saratov (oblast)</item>
        <item>Smolensk (oblast)</item>
        <item>Stavropol (kray)</item>
        <item>Sverdlovsk (oblast)</item>
        <item>Tambov (oblast)</item>
        <item>Tatarstan (republic)</item>
        <item>Tomsk (oblast)</item>
        <item>Tula (oblast)</item>
        <item>Tver (oblast)</item>
        <item>Tyumen (oblast)</item>
        <item>Tyva (republic)</item>
        <item>Udmurtiya (republic)</item>
        <item>Ulyanovsk (oblast)</item>
        <item>Vladimir (oblast)</item>
        <item>Volgograd (oblast)</item>
        <item>Vologda (oblast)</item>
        <item>Voronezh (oblast)</item>
        <item>Yamalo-Nenets (autonomous okrug)</item>
        <item>Yaroslavl (oblast)</item>
        <item>Yevrey (autonomous oblast)</item>
        <item>Zabaykalye (kray)</item>
    </string-array>
    <string name="title_biometry">Biometry</string>
    <string name="icon_biometry">icon_biometry</string>
    <string name="text_biometry">Making biometrics videos</string>
    <string name="info_text_biometry">Find a lighted spot</string>
    <string name="icon_prepare_passport">icon_prepare_passport</string>
    <string name="text_passport_photo">Prepare your passport</string>
    <string name="text_info_passport_photo">Take a photo of 2–3 pages of your passport</string>
    <string name="title_passport_photo">Passport Photo</string>
</resources>