<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title_passport_photo"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="15.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="147.5dp"
        android:fontFamily="@font/gotham_pro"
        android:lineHeight="24dp"
        android:lineSpacingExtra="5sp"
        android:text="@string/title_passport_photo"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="10.34dp"
        android:layout_height="10.34dp"
        android:layout_marginStart="98.5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:contentDescription="@string/icon_close"
        android:src="@drawable/ic_close_vtb_card_steps"
        app:layout_constraintBottom_toBottomOf="@id/title_passport_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_passport_photo"
        app:layout_constraintTop_toTopOf="@id/title_passport_photo" />

    <ImageView
        android:id="@+id/icon_prepare_passport"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="127.5dp"
        android:layout_marginBottom="393dp"
        android:contentDescription="@string/icon_prepare_passport"
        android:src="@drawable/ic_prepare_passport_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_passport_photo"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="44.5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham_pro"
        android:gravity="center_horizontal|top"
        android:text="@string/text_passport_photo"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:textStyle="normal"
        android:translationY="-2.43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_prepare_passport"
        tools:targetApi="p" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="79dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gotham_pro"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="5sp"
        android:text="@string/text_info_passport_photo"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textStyle="normal"
        android:translationY="-2.34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_passport_photo"
        tools:targetApi="p" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_capture_passport_photo"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_next"
        android:fontFamily="@font/gotham_pro"
        android:gravity="center_vertical|center_horizontal"
        android:lineSpacingExtra="5sp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>